update to files
added in personal dashboard functionality

--- a/Wray_Tracker/Views/Admin/ManageRoles.cshtml
+++ b/Wray_Tracker/Views/Admin/ManageRoles.cshtml
@@ -39,10 +39,10 @@
                     @Html.DisplayName("Full Name")
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Email)
+                    @Html.DisplayName("Email")
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.RoleName)
+                    @Html.DisplayName("Role Name")
                 </th>
             </tr>
         </thead>
