--- a/Wray_Tracker/Views/Projects/Details.cshtml
+++ b/Wray_Tracker/Views/Projects/Details.cshtml
@@ -27,7 +27,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ManagerId)
+            @ViewBag.PMName
         </dt>
 
         <dd>
