--- a/Wray_Tracker/Views/Projects/ManageProjectLevelUsers.cshtml
+++ b/Wray_Tracker/Views/Projects/ManageProjectLevelUsers.cshtml
@@ -10,7 +10,7 @@
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-        @Html.Hidden("ProjectId", Model.Id)
+        @*@Html.Hidden("ProjectId", Model.Id)*@
 
         <div class="row">
             @* Left column that holds the users *@
