--- a/Wray_Tracker/Views/Projects/ManageProjectAssignments.cshtml
+++ b/Wray_Tracker/Views/Projects/ManageProjectAssignments.cshtml
@@ -1,37 +1,60 @@
 ﻿@model IEnumerable<Wray_Tracker.ViewModels.CustomUserData>
 @{
     ViewBag.Title = "ManageProjectAssignments";
+    
 
 }
 
-<h2>@ViewBag.Title</h2>
+<h2>Manage Project Assignments</h2>
 
 <div class="container-fluid">
+    <div class="row">
+        @* Left Side Lists *@
+        <div class="col">
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
 
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-
-
-        <div class="row">
-            @* Left column that holds the users *@
-            <div class="col">
-                  @Html.ListBox("UserIds")
-            </div>
-
-            @* Right column for holding my Roles *@
-            <div class="col">
-                @Html.DropDownList("ProjectIds")
-            </div>
+                <div class="row">
+                    <div class="col">
+                        @Html.ListBox("UserIds")
+                    </div>
+                    <div class="col">
+                        @Html.DropDownList("ProjectIds")
+                    </div>
+                </div>
+                <br />
+                <div class="row">
+                    <div class="col">
+                        <button type="submit" class="btn btn-outline-secondary" style="">Assign to Projects</button>
+                    </div>
+                </div>
+            }
         </div>
         <br />
-        <div class="row">
-            <div class="col">
-                <button type="submit" class="btn btn-dark" style="">Manage Project Assignments</button>
-            </div>
-        </div>
-    }
+        @* Right Side Lists *@
+        <div class="col">
+            @using (Html.BeginForm("ManageProjectLevelUsersRemove", "Projects"))
+            {
+                @Html.AntiForgeryToken()
 
+                <div class="row">
+                    <div class="col">
+                        @Html.ListBox("UserIds")
+                    </div>
+                    <div class="col">
+                        @Html.DropDownList("ProjectIds")
+                    </div>
+                </div>
+                <br />
+                <div class="row">
+                    <div class="col">
+                        <button type="submit" class="btn btn-outline-danger" style="">Unassign from Project</button>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
     <hr />
 
     <table class="table">
@@ -41,7 +64,10 @@
                     @Html.DisplayName("Full Name")
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Email)
+                    @Html.DisplayName("Email")
+                </th>
+                <th>
+                    @Html.DisplayName("Role Name")
                 </th>
                 <th>
                     @Html.DisplayName("Projects")
@@ -51,21 +77,24 @@
         <tbody>
             @foreach (var user in Model)
             {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(model => user.FullName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(model => user.Email)
-                    </td>
-                    <td>
-                        @foreach (var projName in user.ProjectNames)
-                        {
-                            @projName
-                            <br />
-                        }
-                    </td>
-                </tr>
+            <tr>
+                <td>
+                    @Html.DisplayFor(model => user.FullName)
+                </td>
+                <td>
+                    @Html.DisplayFor(model => user.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(model => user.RoleName)
+                </td>
+                <td>
+                    @foreach (var projName in user.ProjectNames)
+                    {
+                        @projName
+                        <br />
+                    }
+                </td>
+            </tr>
             }
         </tbody>
 
