--- a/Wray_Tracker/Views/Tickets/Index.cshtml
+++ b/Wray_Tracker/Views/Tickets/Index.cshtml
@@ -42,9 +42,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Updated)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.IsArchived)
-            </th>
+            </th>*@
             <th></th>
         </tr>
     </thead>
@@ -60,7 +60,7 @@
                     @Html.DisplayFor(modelItem => item.Project.Name)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Submitter.FirstName)
+                    @Html.DisplayFor(modelItem => item.Submitter.Email)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.TicketType.Name)
@@ -83,13 +83,13 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Updated)
                 </td>
-                <td>
+                @*<td>
                     @Html.DisplayFor(modelItem => item.IsArchived)
-                </td>
+                </td>*@
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                     @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    @*@Html.ActionLink("Delete", "Delete", new { id = item.Id })*@
                 </td>
             </tr>
         }
