updates to files
worked in confirm email functionality to require new users to verify email prior to accessing the site

--- a/Wray_Tracker/Views/Admin/ManageRoles.cshtml
+++ b/Wray_Tracker/Views/Admin/ManageRoles.cshtml
@@ -14,12 +14,12 @@
         <div class="row">
             @* Left column that holds the users *@
             <div class="col">
-                @Html.ListBox("UserIds")
+                @Html.ListBox("UserIds", null, new { @class = "custom-select multiple" })
             </div>
 
             @* Right column for holding my Roles *@
             <div class="col">
-                @Html.DropDownList("RoleName", "- Select Role -")
+                @Html.DropDownList("RoleName", null, new { @class = "custom-select multiple" })
             </div>
         </div>
         <br />
