--- a/Wray_Tracker/Views/Projects/Index.cshtml
+++ b/Wray_Tracker/Views/Projects/Index.cshtml
@@ -21,7 +21,7 @@
                 @Html.DisplayNameFor(model => model.Description)
             </th>
             <th>
-                @Html.DisplayName("Manager")
+                @Html.DisplayName("Project Manager")
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Created)
