--- a/Wray_Tracker/Views/Projects/ManageProjectAssignments.cshtml
+++ b/Wray_Tracker/Views/Projects/ManageProjectAssignments.cshtml
@@ -17,10 +17,10 @@
 
                 <div class="row">
                     <div class="col">
-                        @Html.ListBox("UserIds")
+                        @Html.ListBox("UserIds", null, new { @class = "custom-select multiple" })
                     </div>
                     <div class="col">
-                        @Html.DropDownList("ProjectIds")
+                        @Html.DropDownList("ProjectIds", null, new { @class = "custom-select multiple" })
                     </div>
                 </div>
                 <br />
@@ -40,10 +40,10 @@
 
                 <div class="row">
                     <div class="col">
-                        @Html.ListBox("UserIds")
+                        @Html.ListBox("UserIds", null, new { @class ="custom-select multiple" })
                     </div>
                     <div class="col">
-                        @Html.DropDownList("ProjectIds")
+                        @Html.DropDownList("ProjectIds", null, new { @class = "custom-select multiple" })
                     </div>
                 </div>
                 <br />
