--- a/Wray_Tracker/Views/Account/Register.cshtml
+++ b/Wray_Tracker/Views/Account/Register.cshtml
@@ -123,7 +123,7 @@
                         </a>
                     </div>
 
-                    <a href="@Url.Action("Index", "Home")" class="text-center">I already have a membership</a>
+                    <a href="@Url.Action("Login", "Account")" class="text-center">I already have a membership</a>
                 </div>
                 <!-- /.form-box -->
             </div><!-- /.card -->
