--- a/Wray_Tracker/Views/Shared/_Layout.cshtml
+++ b/Wray_Tracker/Views/Shared/_Layout.cshtml
@@ -191,7 +191,7 @@
                                             <p>Create Project</p>
                                         </a>
                                     </li>
-                                }
+
 
                                 <li class="nav-item">
                                     <a href="@Url.Action("Index", "Projects")" class="nav-link">
@@ -199,6 +199,7 @@
                                         <p>Active Projects</p>
                                     </a>
                                 </li>
+                                }
                             </ul>
                         </li>
 
@@ -212,28 +213,33 @@
                                 </p>
                             </a>
                             <ul class="nav nav-treeview">
-                                <li class="nav-item">
-                                    @if (User.IsInRole("Submitter"))
-                                    {
+                                @if (User.IsInRole("Submitter"))
+                                {
+                                    <li class="nav-item">
+
                                         <a href="@Url.Action("Create", "Tickets")" class="nav-link">
                                             <i class="far fa-circle nav-icon"></i>
                                             <p>New Ticket</p>
                                         </a>
-                                    }
-                                </li>
-                                <li class="nav-item">
-                                    <a href="@Url.Action("Index", "Tickets")" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Active Tickets</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="pages/charts/inline.html" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Ticket History</p>
-                                    </a>
-                                </li>
-                            </ul>
+                                        
+                                    </li>
+                                }
+                                @if (User.IsInRole("Admin"))
+                                {
+                                    <li class="nav-item">
+                                        <a href="@Url.Action("Index", "Tickets")" class="nav-link">
+                                            <i class="far fa-circle nav-icon"></i>
+                                            <p>Active Tickets</p>
+                                        </a>
+                                    </li>
+                                }
+                                    <li class="nav-item">
+                                        <a href="pages/charts/inline.html" class="nav-link">
+                                            <i class="far fa-circle nav-icon"></i>
+                                            <p>Ticket History</p>
+                                        </a>
+                                    </li>
+                                </ul>
                         </li>
                         <!-- Log Out -->
                         <li class="nav-item">
