--- a/Wray_Tracker/Views/Projects/Index.cshtml
+++ b/Wray_Tracker/Views/Projects/Index.cshtml
@@ -69,14 +69,16 @@
                 <td>
                     @if (User.IsInRole("Admin") || User.IsInRole("Manager"))
                     {
-                        @Html.ActionLink("Manage Members |", "ManageProjectAssignments", new { id = item.Id });
+                        @Html.ActionLink("Manage Members |", "ManageProjectAssignments", new { id = item.Id })
 
-                        @Html.ActionLink(" Edit", "Edit", new { id = item.Id });
+                        @Html.ActionLink(" Edit |", "Edit", new { id = item.Id })
+
+                        @Html.ActionLink(" Details", "Details", new { id = item.Id })
                     }
 
                     @if (User.IsInRole("Submitter"))
                     {
-                        @Html.ActionLink("Create Ticket", "Create", "Tickets", new { projectId = item.Id }, null);
+                        @Html.ActionLink("Create Ticket", "Create", "Tickets", new { projectId = item.Id }, null)
                     }
 
 
